tests/baselines/reference/ES5For-ofTypeCheck8.errors.txt
ES5For-ofTypeCheck8.ts(3,6): error TS2322: Type 'string | number | symbol' is not assignable to type 'symbol'.
  Type 'string' is not assignable to type 'symbol'.


==== ES5For-ofTypeCheck8.ts (1 errors) ====
    var union: string | string[]| number[]| symbol[];
    var v: symbol;
    for (v of union) { }
         ~
!!! error TS2322: Type 'string | number | symbol' is not assignable to type 'symbol'.
!!! error TS2322:   Type 'string' is not assignable to type 'symbol'.